--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -25,4 +25,20 @@
   .input-default {
     @apply w-full py-1 px-2 rounded-lg bg-gray-600 ring-1 ring-gray-400 text-gray-300;
   }
+
+  .form-default {
+    @apply w-full max-w-[600px] mx-auto flex flex-col gap-2;
+  }
+
+  .thumbnail {
+    @apply w-full relative h-64;
+  }
+
+  .thumbnail-img {
+    @apply w-full h-full object-cover brightness-50;
+  }
+
+  .thumbnail-title {
+    @apply absolute top-1/2 left-1/2 text-6xl font-upper -translate-x-1/2 -translate-y-1/2;
+  }
 }
