--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -26,6 +26,10 @@
     @apply w-full py-1 px-2 rounded-lg bg-gray-600 ring-1 ring-gray-400 text-gray-300;
   }
 
+  .textarea-default {
+    @apply py-1 px-2 rounded-lg bg-gray-600 ring-1 ring-gray-400 w-full;
+  }
+
   .form-default {
     @apply w-full max-w-[600px] mx-auto flex flex-col gap-2;
   }
